Link to Hegemony

--- a/hegemony/index.htm
+++ b/hegemony/index.htm
@@ -292,7 +292,7 @@
             font-weight: bold;
         }
     </style>
-    <title>Hegemony Digital Automa</title>
+    <title>Hegemony Automa Helper</title>
 </head>
 <body>
     <main id="hg">
