--- a/hegemony/index.htm
+++ b/hegemony/index.htm
@@ -88,7 +88,12 @@
             align-items: flex-start;
             gap: 0.5rem;
             margin-block-start: 0.5rem;
-            width: 100%;
+        }
+
+        @media only screen and (max-width: 600px) {
+            .app-header {
+                width: 100%;
+            }
         }
 
         .app-header h1 {
